@@ -10,6 +10,7 @@ You can now run multiple features at specific lines numbers like this:
 This will run foo.feature at line 15 and bar.feature at line 6, 45 and 111.
 
 === New features
+* Added example showing how to use Cucumber with Test::Unit + Matchy instead of RSpec (Aslak Hellesøy)
 * Yield existing world object to World block (#87 Aslak Hellesøy)
 * AUTOFEATURE=tRue works (case insensitive) (Aslak Hellesøy)
 * Support for .NET via IronRuby. See examples for details. (Aslak Hellesøy)
